# onegov2-inwoner-centraal

./: .gitignore  CHALLENGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  START_HERE.md
.github/ISSUE_TEMPLATE/: data-issue.md
.github/workflows/: validate-data.yml
data/: README.md
data-generation/: README.md  generate.py  pyproject.toml
data-generation/generators/: __init__.py  _common.py  brp.py  correspondentie.py  kvk_rvo.py  rechten.py  tijdlijn.py  verplichtingen.py
data-generation/reference/: brieven-catalogus.yaml  organisaties.yaml  tarieven.yaml
data-generation/tests/: test_fixtures.py  test_schemas.py
data/fixtures/: anneke.json  marcus.json  ondernemer.json
data/schemas/: 01-brp-overlijden.schema.json  02-verplichtingen.schema.json  03-rechten-partner.schema.json  04-correspondentie.schema.json  05-tijdlijn.schema.json  06-kvk-rvo.schema.json
data/synthetic/: correspondentie.jsonl  overledenen.jsonl  rechten.jsonl  tijdlijn.json  verplichtingen.jsonl
docs/: api-mocks.md  architectuur-context.md  beoordelingscriteria.md  casus-truus.md  data-dictionary.md  glossary.md  juridisch-kader.md  personas.md  scenarios.md
resources/: Situatie-Truus.pptx
